<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/edit_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        tools:text="Title" />

    <TextView
        android:id="@+id/edit_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_book_title"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD"
        tools:text="Author" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_book_author"
        android:text="@string/label_price"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/edit_book_price"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_book_author"
        android:layout_gravity="end"
        android:layout_toRightOf="@+id/price_label"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/price_label"
        android:text="@string/label_quantity"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/edit_book_quantity"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_label"
        android:layout_gravity="end"
        android:layout_toRightOf="@+id/quantity_label"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textColor="#AEB6BD" />

    <ImageView
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/add_to_cart"
        android:padding="4dp"
        android:src="@drawable/add_shopping_cart" />

</RelativeLayout>